<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_0" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8gn-60-gWI">
                                <rect key="frame" x="20" y="57" width="350" height="753"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wzi-Zr-Lr1">
                                        <rect key="frame" x="0.0" y="0.0" width="350" height="38.333333333333336"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IrF-Wu-Gxh" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="307" height="38.333333333333336"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="24"/>
                                                <color key="textColor" name="ypWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Hl-Rt-93E" userLabel="Index Label">
                                                <rect key="frame" x="307" y="0.0" width="43" height="38.333333333333336"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="24"/>
                                                <color key="textColor" name="ypWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BHu-X3-6Y7" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="58.333333333333314" width="350" height="525"/>
                                        <color key="backgroundColor" name="ypWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="BHu-X3-6Y7" secondAttribute="height" multiplier="2:3" id="b1A-5i-Ak6"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="20"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Be-rY-itu">
                                        <rect key="frame" x="0.0" y="603.33333333333337" width="350" height="69.666666666666629"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ck-Hr-3jr" userLabel="Question Label">
                                                <rect key="frame" x="35" y="4" width="280" height="57"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="57" id="kkt-5M-0lU"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                                <color key="textColor" name="ypWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" name="ypBlack"/>
                                        <constraints>
                                            <constraint firstAttribute="bottom" secondItem="3ck-Hr-3jr" secondAttribute="bottom" constant="8.6666666666666288" id="2gp-wp-BMq"/>
                                            <constraint firstItem="3ck-Hr-3jr" firstAttribute="leading" secondItem="4Be-rY-itu" secondAttribute="leading" constant="35" id="4b0-KJ-cdY"/>
                                            <constraint firstItem="3ck-Hr-3jr" firstAttribute="centerX" secondItem="4Be-rY-itu" secondAttribute="centerX" id="Yjp-Rq-RdG"/>
                                            <constraint firstItem="3ck-Hr-3jr" firstAttribute="top" secondItem="4Be-rY-itu" secondAttribute="top" constant="4" id="b5Z-aO-94e"/>
                                        </constraints>
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="oi6-Wj-Kxt">
                                        <rect key="frame" x="0.0" y="693" width="350" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dG0-ud-e33" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="165" height="60"/>
                                                <color key="backgroundColor" name="ypWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="ypBlack"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="ypBlack"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3tZ-hv-728"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93g-Wc-S2d" userLabel="Yes button">
                                                <rect key="frame" x="185" y="0.0" width="165" height="60"/>
                                                <color key="backgroundColor" name="ypWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="tintColor" name="ypBlack"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="ypBlack"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ahw-bh-QIk"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="zk8-7e-GyX"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="4Ie-Mo-INL">
                                <rect key="frame" x="185" y="412" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="ypBlack"/>
                        <constraints>
                            <constraint firstItem="4Ie-Mo-INL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="EHu-8h-SUM"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8gn-60-gWI" secondAttribute="bottom" id="UUt-ag-6hY"/>
                            <constraint firstItem="4Ie-Mo-INL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ubf-US-oYJ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8gn-60-gWI" secondAttribute="trailing" constant="20" id="jTp-MY-zIv"/>
                            <constraint firstItem="8gn-60-gWI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="p9n-20-3vD"/>
                            <constraint firstItem="8gn-60-gWI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="rWG-1n-y6t"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ActivityIndicator" destination="4Ie-Mo-INL" id="Ool-sy-8dd"/>
                        <outlet property="counterLabel" destination="9Hl-Rt-93E" id="EFV-Wm-e8o"/>
                        <outlet property="imageView" destination="BHu-X3-6Y7" id="81K-r3-rLh"/>
                        <outlet property="noButton" destination="dG0-ud-e33" id="ukB-iI-4mi"/>
                        <outlet property="textLabel" destination="3ck-Hr-3jr" id="uZG-Vj-NfR"/>
                        <outlet property="yesButton" destination="93g-Wc-S2d" id="qv5-tn-lna"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.38461538461538" y="55.45023696682464"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="ypBlack">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="ypWhite">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
